--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 export const prerender = false;
+export const dynamic = 'force-dynamic';
 import Layout from '../layouts/Layout.astro';
 
 const gatekeeperRequest = `POST /api/v1/gatekeeper
